--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <h1 class="title">2023 신년계획</h1>
     <p class="msg">2023년 이룰 다짐!</p>
     <div class="row flex-row wrap">
-        <div class="bucket img1-t1 center">바디프로필 찍기</div>
+        <div class="bucket img1-t1 center done">바디프로필 찍기</div>
         <div class="bucket img2 center">바디프로필 찍기</div>
         <div class="bucket img2 center">바디프로필 찍기</div>
         <div class="bucket img1-t4 center">바디프로필 찍기</div>
